Version 0.XXXXX | Next Sunday AD | a873164

    API Changes/Compatibility Information:
     * New Widgets/Types
       - TextBuffer, Selection

    Meanwhile:
     * 開例 R. was born November 16th at 8:58am. She was 3.670kg and 52cm long
     * Requires Alien::FLTK2 now that Alien::FLTK builds the 1.3.x branch

Version 0.531 | 2009-11-06 03:34:36Z (Fri, 06 Nov 2009) | 53908ec

    API Changes/Compatibility Information:
     * New Widgets/Types
       - PackedGroup, PixelType, Preferences, ProgressBar, RadioButton,
           RadioItem, RadioLightButton, Rectangle (base class of all Widgets),
           RepeatButton, ReturnButton, Scrollbar, ScrollGroup, SecretInput
           (for passwords), ShapedWindow, Slider, Symbol (.*Image base class),
           Valuator, ValueInput, and xpmImage
     * Support for fltk's file and directory chooser API
     * The variables $FLTK::ok, $FLTK::yes, $FLTK::no, $FLTK::cancel,
           $FLTK::message_window_label, $FLTK::message_window_timeout, and
           $FLTK::message_window_scrollable are now connected to their C++
           counterparts and may be imported with the :vars tag

    Resolved Issues/Bug Fixes:
     * FLTK::Menu->item() now (attempts to) return correctly blessed widgets

    Internal/Behavioral Changes:
     * The :default tag is no longer automatically exported

    Documentation/Sample Code/Test Suite:
     * Basic Rectangle tests
     * New example script for xpmImage
     * New FLTK::CheatSheet (incomplete)
     * First few recipes in the FLTK::Cookbook

    Notes:
     * The FLTK project is just getting started so now's a great time to join

    Meanwhile:
     * Ian G. was born October 23rd at 1:22pm. He was 8lbs 14oz and 22in long

Version 0.530 | 2009-10-05 00:42:52Z (Mon, 05 Oct 2009) | 3b70f43

    API Changes/Compatibility Information:
     * ...see below

    Resolved Issues/Bug Fixes:
     * ...see below

    Internal/Behavioral Changes:
     * It actually exists
