@@ -3,6 +3,7 @@ Version 0.XXXXX | Next Sunday AD | a873164
     API Changes/Compatibility Information:
      * New Widgets/Types
        - TextBuffer, Selection
+     * Early FLTK::Theme support
 
     Meanwhile:
      * 開例 R. was born November 16th at 8:58am. She was 3.670kg and 52cm long
